Updated GameRoom.css to fix minor squishing in the background element.

--- a/react-app/src/Styles/GameRoom.css
+++ b/react-app/src/Styles/GameRoom.css
@@ -15,10 +15,11 @@ p2 {
 }
 
 .gameroomBackground {
-    background-image: url('../Gameroom.jpg');
-    background-position: center;
-    background-size: 100% 100%;
-    width: 100%;
-    height: 100%;
-    position: fixed;
+  background-image: url("../Gameroom.jpg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100%;
+  position: fixed;
 }
